--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -39,7 +39,7 @@ This tabular overview lists the suitable ontologies with regard to:
 | [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | PubChem, Open PHACTS |
 | [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | Chemotion, Allotrope™ |
 | [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | RXNO |
-| [RXNO](https://terminoloygy.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
+| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
 | [OntoKin](http://www.theworldavatar.com/kb/ontokin/ontokin.owl) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
 | [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO classes & relations, many AFO- some custom OBO-modules  | Allotrope™ |
 | [PROCO](https://raw.githubusercontent.com/proco-ontology/PROCO/main/proco.owl) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO based | Allotrope™ |
