--- a/docs/30_data/70_choose_repository.mdx
+++ b/docs/30_data/70_choose_repository.mdx
@@ -25,7 +25,7 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 - [STRENDA DB](https://www.beilstein-strenda-db.org/) 
 - [SUPRABANK](https://suprabank.org/) 
 
-### Associated Repositories
+## Associated Repositories
 
 - [CSD](https://www.ccdc.cam.ac.uk/structures/), [ICSD](https://icsd.fiz-karlsruhe.de/) and joint [CCDC/FIZ](https://www.ccdc.cam.ac.uk/structures/) Access Structures Service
 
