--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -27,25 +27,8 @@ To date, there is not one ELN, that fits the requirements for all chemical disci
 
 Therefore, choosing the right ELN is crucial for a successful implementation of an ELN in a laboratory. Three steps should be taken to establish an ELN: 1) Needs assessment, 2) Testing and 3) Introducing the chosen ELN.
 
-:::caution Needs assessment
-- Analysing current situation (budget, IT resources, software enviroment)
-- Definition of important features
-- ELN concept (generic, discipline-specific)
-- Drawing on experiences of other research Institutions
-:::
-
-:::info Testing the selected products
-- Demo versions or free trial access for individual users
-- Testing no more than 2-3 ELNs
-- In-depth testing using real-life use cases from the lab
-:::
-
-:::tip Introducing the chosen ELN
-- Run training courses, training material
-- Designate contact persons from the test team
-- Continuous mentoring
-:::
-
+![Right ELN](/img/topics/The_right_ELN.png)
+Image Attribution: ZB MED ELN-Guide, 2021, [https://dx.doi.org/10.4126/FRL01-006425772](https://dx.doi.org/10.4126/FRL01-006425772).
 
 ### Criteria for selecting an ELN
 
