--- a/docs/30_data/70_choose_repository.mdx
+++ b/docs/30_data/70_choose_repository.mdx
@@ -133,7 +133,7 @@ RADAR aims to ensure access to and long-term availability of archived and publis
 Quick stats:
 - **Accepted data types:** Currently none, EnzymeML (in development)
 - **Used standards/ontologies:** DataCite, InChI, [EnzymeML (in development)](https://enzymeml.org/)
-- **Access rights/licence information/embargo:** [Creative Commons Attribution 4.0 International (CC BY 4.0)](https://creativecommons.org/licenses/by/4.0/[), [Term of Use](https://www.beilstein-strenda-db.org/strenda/termsConditions.xhtml); no embargo
+- **Access rights/licence information/embargo:** [Creative Commons Attribution 4.0 International (CC BY 4.0)](https://creativecommons.org/licenses/by/4.0/), [Term of Use](https://www.beilstein-strenda-db.org/strenda/termsConditions.xhtml); no embargo
 - **Recommended by Journals/Societies:** [Archives in Biochemistry and Biophysics](https://www.sciencedirect.com/journal/archives-of-biochemistry-and-biophysics), [Beilstein Journal of Organic Chemistry](https://www.beilstein-journals.org/bjoc/home), [eLife](https://elifesciences.org/), [Molecular Catalysis](https://www.sciencedirect.com/journal/molecular-catalysis), [Nature](https://www.nature.com/) (including Biotechnology, Chemistry, Microbiology, Pharmacology, Systems Biology), [PLoS](https://plos.org/) (relevant journals, e.g. One, Biology, Computational Biology, Medicine), [Scientific Data](https://www.nature.com/sdata/), [The Journal of Biological Chemistry](https://www.jbc.org/)
 
 <details>
