--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -44,7 +44,7 @@ One of the most important things, that distinguishes an ELN from a white blank p
         </div>
         <div className="col col--4">
             <div className="button button--lg button--primary" style={{ width: 300, height: 420, padding: 20, }}>
-            <h3>Knowledge Management</h3>
+            <h3>Laboratory Information Management System</h3>
             <ul>
                 <li>Sample management</li>
                 <li>Instrument integration</li>
