--- a/docs/30_data/70_choose_repository.mdx
+++ b/docs/30_data/70_choose_repository.mdx
@@ -36,7 +36,7 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 ## Further repositories (currently in development):
 
 - [nmrXiv](https://docs.nmrxiv.org/) (NMR data)
-- VibSpecDB (Raman and IR spectra
+- VibSpecDB (Raman and IR spectra)
 
 Moreover, the consortium supports further databases and data repositories on interoperability issues and encourages them to participate in the development of NFDI4Chem standards and interfaces. 
 Please note: you are free to pledge your dataset to the NFDI4Chem-[survey form](https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform). Support will be provided via a consulting service or more intense data stewardship to assist in publishing your research data. A suitable repository will also be suggested.
