Completed How to choose the right repository

--- a/docs/30_data/70_choose_repository.mdx
+++ b/docs/30_data/70_choose_repository.mdx
@@ -146,6 +146,68 @@ STRENDA DB is a repository for enzymology data operated since 2016 and hosted at
 
 ### SupraBank
 
+Quick stats:
+
+- **Accepted data types:** JSON (DataCite), CDX (for 2D/3D molecule structure), PNG, proprietary formats
+- **Used standards/ontologies:** DataCite 4.0, Dublin Core for metadata tags
+- **Access rights/licence information/embargo:** CC licences (CC0, BY, BY-SA), embargo possible (unlimited)
+- **Recommended by Journals/Societies:** not yet
+
+<details>
+  <summary>Click to expand for more details about SupraBank!</summary>
+
+<h3>SupraBank</h3>
+ 
+SupraBank is hosted at KIT (Karlsruhe) since 2019 and is a curated database that provides project data on intermolecular interactions of molecular systems and supramolecular interactions which are not available in other repositories or databases. SupraBank is mainly aimed at supramolecular and physical chemists or biologists in the domain of organic chemistry who deal with binding, assembly, and interaction phenomena. Molecular properties are retrieved from PubChem, allowing the correlation of intermolecular interactions parameters to molecular properties of the interacting components. All molecules, solvents, and additives are searchable by their chemical identifiers. At present, the Suprabank stores more than 3500 curated data sets of intermolecular interaction parameters. The data has open access for viewing and registered access for data download and contribution. It can be searched for experiments and related components, molecule interactions, and publications while being curated by non-judgemental plausibility checks. The current implementation of AAI consists of internal user administration (anonymous and non-anonymous user, data provider, administrator). DOI is used as the identification system for citations and ORCID iD as the identification system for authors. Its web interface offers file format compatibility with CSV, JSON, BibTex, RIS, and Endnote and its tool suite contains molecule representations as pictures, a structure editor and a simulation modeller tool.
+</details>
+
 ### CSD, ICSD and joint CCDC/FIZ Access Structures Service
 
+Quick stats:
+
+ICSD quick stats:
+
+- **Accepted data types:** CIF 
+- **Used standards/ontologies:** none
+- **Access rights/licence information/embargo:** usage terms, no embargo
+- **Recommended by Journals/Societies:** List of the [80 most important journals](https://icsd.products.fiz-karlsruhe.de/about/list-80-most-important-journals-covered-icsd) covered by ICSD
+
+CSD quick stats:
+
+- **Accepted data types:** primarily CIF but other supporting file formats accepted 
+- **Used standards/ontologies:** CIF, DataCite
+- **Access rights/licence information/embargo:** usage terms, data embargoed until an associated article is published or researcher triggers publication
+- **Recommended by Journals/Societies:** IUCr, Royal Society of Chemistry, American Chemical Society, Wiley, Elsevier, Springer Nature, Taylor & Francis, Hindawi, Chemical Society of Japan
+
+Joint CCDC/FIZ Access Structures Service quick stats:
+
+- **Accepted data types:** primarily CIF but other supporting file formats accepted. 
+- **Used standards/ontologies:** CIF, DataCite
+- **Access rights/licence information/embargo:** usage terms, data embargoed until an associated article is published or researcher triggers publication
+- **Recommended by Journals/Societies:** IUCr, Royal Society of Chemistry, American Chemical Society, Wiley, Elsevier, Springer Nature, Taylor & Francis, Hindawi, Chemical Society of Japan
+
+<h3>CSD, ICSD and joint CCDC/FIZ Access Structures Service</h3>
+ 
+The <a href="https://icsd.fiz-karlsruhe.de/">Inorganic Crystal Structure Database</a> (ICSD) provided by <a href="https://www.fiz-karlsruhe.de/">FIZ Karlsruhe</a> is the world's largest database of completely identified inorganic crystal structures. It contains over 260,000 datases. Complimentarily, the CCDC provides the <a href="https://www.ccdc.cam.ac.uk/structures/">Cambridge Structural Database</a> (CSD), a <a href="https://www.coretrustseal.org/">certified trusted</a> database of fully curated and enhanced organic and metal-organic crystal structures. First established over fifty years ago it now contains over one million entries. ICSD and CSD support scientists in the field of crystallography, chemistry, material science, physics and structural biology. The <a href="https://www.ccdc.cam.ac.uk/structures/">joint CCDC/FIZ Access Structures Service</a>, launched in 2018, serves to deposit, register and preserve structure data of inorganic crystalline compounds at no charge. Crystal structures mentioned in scientific publications are stored in the crystal structure depot. Upon deposition, each data set is assigned a Digital Object Identifier (DOI) so that the crystal structure is unambiguously identified and registered. The DOI enables third parties to cite and reference data according to the rules of good scientific practice.
+Both institutions are world-leading experts in structural data and their databases combined contain every published organic, metal-organic and inorganic crystal structure and are essential resources for the structural chemistry community. Each dataset has to pass rigorous quality checks with manual curation performed by scientific experts. These rich, high-quality data resources alongside advanced software provided by the two institutions enable scientists from industry and academia to extract new insights from the data and discover novel scientific trends. Researchers in structural chemistry rely on the data, it is relevant to industry, and used to teach chemistry concepts to new generations of scientists. Collectively, the licensed databases are installed in over 1,300 institutions worldwide.
+Prior to data deposition, ICSD requires registration whease CSD is open. The <a href="https://www.ccdc.cam.ac.uk/structures/">joint CCDC/FIZ Access Structures Service is open</a>joint CCDC/FIZ Access Structures Service is open for depositing data and all datasets freely available on an individual basis. Moreover, researchers can register but registration is not required to deposit or retrieve data. DOIs are linked to the related publications in both cases. CIF (Crystallographic Information Framework) are the metadata standards and the accepted data type. The joint CCDC/FIZ Access Structures Service and CSD are CoreTrustSeal certified.
+</details>
+
 ### NOMAD
+
+Quick stats:
+
+- **Accepted data types:** [50 supported codes](https://nomad-lab.eu/prod/v1/gui/about/information)
+- **Used standards/ontologies:** DataCite; no ontology at the moment (planned to create ontologies for specific parts of the data)
+- **Access rights/licence information/embargo:** CC BY 4.0; Embargoes definable up to 3 years
+- **Recommended by Journals/Societies:** The repository is recommended by [Scientific Data](https://www.nature.com/sdata/policies/repositories#materials)
+
+<details>
+  <summary>Click to expand for more details about NOMAD!</summary>
+  
+ <h3>NOMAD</h3>
+ 
+Nomad is a public repository operating since 2015 that is hosted at the MPCDF (Max Planck Computing and Data Facility) in Garching, Munich. It contains over 12 millions of data sets (simulations) generated from over 500 users, 98% of which  is published. DOIs are attributed to almost half of them. Their target audience are solid state physicists and theoretical chemists. Data on computational materials science, computational chemistry and molecular physics are those typically contained in the repository. There is a simulation data recognition process during upload and the repository supports the input/output formats of 50 different codes. NOMAD offers an API for data import and export. The repository is recommended by <a href="https://www.nature.com/sdata/policies/repositories#materials">Scientific Data</a> of the Nature publishing group. 
+</details>
+
+
