--- a/docs/30_data/70_choose_repository.mdx
+++ b/docs/30_data/70_choose_repository.mdx
@@ -186,6 +186,9 @@ Joint CCDC/FIZ Access Structures Service quick stats:
 - **Access rights/licence information/embargo:** usage terms, data embargoed until an associated article is published or researcher triggers publication
 - **Recommended by Journals/Societies:** IUCr, Royal Society of Chemistry, American Chemical Society, Wiley, Elsevier, Springer Nature, Taylor & Francis, Hindawi, Chemical Society of Japan
 
+<details>
+  <summary>Click to expand for more details about CSD, ICSD and joint CCDC/FIZ Access Structures Service!</summary>
+
 <h3>CSD, ICSD and joint CCDC/FIZ Access Structures Service</h3>
  
 The <a href="https://icsd.fiz-karlsruhe.de/">Inorganic Crystal Structure Database</a> (ICSD) provided by <a href="https://www.fiz-karlsruhe.de/">FIZ Karlsruhe</a> is the world's largest database of completely identified inorganic crystal structures. It contains over 260,000 datases. Complimentarily, the CCDC provides the <a href="https://www.ccdc.cam.ac.uk/structures/">Cambridge Structural Database</a> (CSD), a <a href="https://www.coretrustseal.org/">certified trusted</a> database of fully curated and enhanced organic and metal-organic crystal structures. First established over fifty years ago it now contains over one million entries. ICSD and CSD support scientists in the field of crystallography, chemistry, material science, physics and structural biology. The <a href="https://www.ccdc.cam.ac.uk/structures/">joint CCDC/FIZ Access Structures Service</a>, launched in 2018, serves to deposit, register and preserve structure data of inorganic crystalline compounds at no charge. Crystal structures mentioned in scientific publications are stored in the crystal structure depot. Upon deposition, each data set is assigned a Digital Object Identifier (DOI) so that the crystal structure is unambiguously identified and registered. The DOI enables third parties to cite and reference data according to the rules of good scientific practice.
