chore: improve eln page mobile appearance

--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -16,8 +16,8 @@ One of the most important things, that distinguishes an ELN from a white blank p
 
 <div className='container'>
     <div className='row'>
-        <div className="col col--4">
-            <div className="button button--lg button--primary" style={{ width: 300, height: 420, padding: 20, }}>
+        <div className="col" style={{ width: 300, padding: 10, }}>
+            <div className="button button--lg button--primary" style={{ width: 300,  height: 420, padding: 20, }}>
             <h3>Simple system</h3>
             <ul>
                 <li>Enter text</li>
@@ -29,11 +29,11 @@ One of the most important things, that distinguishes an ELN from a white blank p
             <em>e.g., Evernote GoogleDrive, Dropbox, MS Sharepoint</em>
             </div>
         </div>
-        <div className="col col--4">
-            <div className="button button--lg button--secondary" style={{ width: 300, height: 420, padding: 20, }}>
+        <div className="col" style={{ width: 300, padding: 10, }}>
+            <div className="button button--lg button--secondary" style={{ width: 300,  height: 420, padding: 20, }}>
             <h3>Electronic Lab Notebook (ELN)</h3>
             <ul>
-                <li>Strurctured metadata in human and machine-readable formats</li>
+                <li>Structured metadata in human and machine-readable formats</li>
                 <li>Discipline-specific functions / editors</li>
                 <li>Rights management</li>
                 <li>Audit trail</li>
@@ -42,8 +42,8 @@ One of the most important things, that distinguishes an ELN from a white blank p
             <em>e.g., Labfolder, RSpace, eLabFTW, Labguru</em>
             </div>
         </div>
-        <div className="col col--4">
-            <div className="button button--lg button--primary" style={{ width: 300, height: 420, padding: 20, }}>
+        <div className="col" style={{ width: 300, padding: 10, }}>
+            <div className="button button--lg button--primary" style={{ width: 300,  height: 420, padding: 20, }}>
             <h3>Laboratory Information Management System</h3>
             <ul>
                 <li>Sample management</li>
@@ -65,7 +65,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
 
 <div className='container'>
     <div className='row'>
-        <div className="col col--6">
+        <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Avoid Data Loss</h3>
             <ul>
@@ -74,7 +74,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
             </ul>
             </div>
         </div>
-        <div className="col col--6">
+        <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--secondary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Knowledge Management</h3>
             <ul>
@@ -89,7 +89,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
         <img className='col col--6 col--offset-3' alt="Data LifeCycle" src={useBaseUrl('/img/topics/FAIR_data_principles.png')} vspace="10" hspace="10"/>
     </div>
     <div className='row'>
-        <div className="col col--6">
+        <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--secondary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Standardised Documentation</h3>
             <ul>
@@ -98,7 +98,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
             </ul>
             </div>
         </div>
-        <div className="col col--6">
+        <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Publication</h3>
             <ul>
