--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last centrury. 
+Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last century. 
 
 Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](../30_data/50_data_storage.mdx).
 
@@ -69,7 +69,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Avoid Data Loss</h3>
             <ul>
-                <li>Linking experimental descriptions to collected data (analog and digital)</li>
+                <li>Linking experimental descriptions to collected data (analogue and digital)</li>
                 <li>Secure data storage, backups</li>
             </ul>
             </div>
@@ -93,7 +93,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
             <div className="button button--lg button--secondary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Standardised Documentation</h3>
             <ul>
-                <li>Strurctured and standardised collection of metadata</li>
+                <li>Structured and standardised collection of metadata</li>
                 <li>Generation of interoperable (meta)data</li>
             </ul>
             </div>
@@ -117,7 +117,7 @@ To date, there is not one ELN, that fits the requirements for all chemical disci
 Therefore, choosing the right ELN is crucial for a successful implementation of an ELN in a laboratory. Three steps should be taken to establish an ELN: 1) Needs assessment, 2) Testing and 3) Introducing the chosen ELN.
 
 :::caution Needs assessment
-- Analysing current situation (budget, IT resources, software enviroment)
+- Analysing current situation (budget, IT resources, software environment)
 - Definition of important features
 - ELN concept (generic, discipline-specific)
 - Drawing on experiences of other research Institutions
@@ -155,7 +155,7 @@ Therefore, choosing the right ELN is crucial for a successful implementation of 
 |Workflows|Documenting processes significantly increases efficiency, traceability and contributes to transparency and transporting of know-how.|
 |Security of evidence|Evidence security means the traceable documentation in compliance with legal regulations, e.g. providing the entries with a time stamp, electronic signature, versioning.|
 |Rule compliance|The tool must enable compliance with regulatory requirements, e.g. GLP, GCP.|
-Table Attribution:ZB MED PUBLISSO ELN-Filter, 2921-06 english.
+Table Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 english.
 
 ## Electronic Lab Notebooks (ELNs) in NFDI4Chem
 
@@ -174,7 +174,7 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 
 ### Documentation, information, and contact
 
-Chemotion ELN an its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/chemotionsaurus/docs/eln/intro). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN and its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/chemotionsaurus/docs/eln/intro). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
 
 ## Sources and further information
 
