--- a/docs/20_role/50_core_facility_manager.mdx
+++ b/docs/20_role/50_core_facility_manager.mdx
@@ -12,9 +12,9 @@ This article applies to core facility managers and heads of analytical service u
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/N4C_DataLifecycle.svg')} width="500" align="right" />
 
-In the chemistry data lifecycle, core facilities play an important role as major producers of chemical data. For modern analytical techniques like mass spectrometry or NMR spectroscopy, data are usually recorded digitally and the challenges lie less in digitalisation but management issues.
+In the chemistry data lifecycle, core facilities play an important role as major producers of chemical data. For modern analytical techniques such as mass spectrometry or NMR spectroscopy, data are usually recorded digitally and the challenges lie less in digitalisation but management issues.
 
-This article reflects some of the most important areas to consider for a core facilities data storage infrastructure and gives perspectives on where [FAIR guiding principles](/docs/topics/fair/) may already be followed today.
+This article reflects some of the most important areas to consider for a core facilities [data storage](/docs/data/data_storage/) infrastructure and gives perspectives on where [FAIR guiding principles](/docs/topics/fair/) may already be followed today.
 
 ## Good Research Practice
 
@@ -26,7 +26,7 @@ The German Research Council ([DFG](https://www.dfg.de)) summarizes the consensus
 
 ## How to start
 
-From the perspective of a core facility, it usually makes sense to separately consider **data safety** and digestion of **sample metadata**.
+From the perspective of a core facility, it usually makes sense to separately consider **data safety** and digestion of [sample metadata](/docs/topics/metadata/).
 
 ### Data safety
 
@@ -34,7 +34,7 @@ The most important aspect for core facility managers is to preculde data loss. A
 
 At most universities, local computing centres will assist in providing decentral and redudant storage. In many cases, this storage can not also be used to provide instrument data to users without direct access to instrument workstations which is usually undesired. Ideally, the remote storage is versioned so that accidental deletions can be reversed.
 
-In addition, **backup strategies** for all instrument workstations should be considered. In addition to providing additional data safety, they also can be very useful for disaster recovery which can be invaluable for legacy systems were software components may no longer be available.
+In addition, [backup strategies](/docs/data/data_storage/) for all instrument workstations should be considered. In addition to providing additional data safety, they also can be very useful for disaster recovery which can be invaluable for legacy systems were software components may no longer be available.
 
 ### Sample Metadata
 
