fix: broken links

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -72,7 +72,7 @@ The handling data section explains common problems and challenges regarding RDM.
 
 <div className="col feature--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/guide')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/dmp')}>
             <img src={useBaseUrl('/img/problem_petrol.svg')} width="120px" />
             <br />
             Handling Data
@@ -91,7 +91,7 @@ These pages contain general information on specific RDM topics and concepts expl
 
 <div className="col feature--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/guide')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/fair')}>
             <img src={useBaseUrl('/img/topics_petrol.svg')} width="120px" />
             <br />
             Topics & Concepts
