--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -10,7 +10,7 @@ Data management plans (DMP) help to outline how research data will be handled du
 
 A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a laboratory information management system in chemistry, represents a type of documentation. These different types of documentation must be considered at different levels. A DMP answers the W-questions for documentation. 
 
-"In a DMP a researcher or research team describes **What** data goes into a project (reuse) and comes out of it (potential reuse), **How** the team takes care of the data, and **Who** is allowed to do **What** with the data **When**."<sup>[1](https://www.openaire.eu/blogs/why-is-this-a-good-data-management-plan)</sup>
+> "In a DMP a researcher or research team describes **What** data goes into a project (reuse) and comes out of it (potential reuse), **How** the team takes care of the data, and **Who** is allowed to do **What** with the data **When**."<sup>[1](https://www.openaire.eu/blogs/why-is-this-a-good-data-management-plan)</sup>
 
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on. The following [elements](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) are included in a DMP:
 
